--- a/_news/RJ-2021-1-foundation/foundation.Rmd
+++ b/_news/RJ-2021-1-foundation/foundation.Rmd
@@ -22,7 +22,7 @@ packages:
 CTV: ~
 creative_commons: CC BY
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
