--- a/_news/RJ-2022-4-bioconductor/RJ-2022-4-bioconductor.Rmd
+++ b/_news/RJ-2022-4-bioconductor/RJ-2022-4-bioconductor.Rmd
@@ -1,240 +1,202 @@
 ---
-title: News from the Bioconductor Project
-abstract: The "News from the Bioconductor Project" article from the 2022-4 issue.
+title: Bioconductor Notes
+draft: no
 author:
-- name: Bioconductor Core Team
-  affiliation: Channing Division of Network Medicine
-  address:
-  - Mass General Brigham
-  - Harvard Medical School, Boston, MA
-  - ''
-  - Department of Data Science
-  - Dana-Farber Cancer Institute
-  - Harvard Medical School, Boston, MA
-  - ''
-  - Biostatistics and Bioinformatics
-  - Roswell Park Comprehensive Cancer Center, Buffalo, NY
-  - ''
-  - Fred Hutchinson Cancer Research Center, Seatlle, WA
-  - ''
-  - |
-    CUNY Graduate School of Public Health, New York, NY
+- name: Maria Doyle
+  affiliation: University of Limerick,Bioconductor Community Manager
+- name: Bioconductor Core Developer Team
+  affiliation: Dana-Farber Cancer Institute, Roswell Park Comprehensive Cancer Center,
+    City University of New York, Fred Hutchinson Cancer Research Center, Mass General
+    Brigham
+type: news
+output:
+  rjtools::rjournal_web_article:
+    self_contained: yes
+    toc: no
+bibliography: RJreferences.bib
 date: '2022-12-01'
-date_received: ~
-journal:
-  firstpage: 352
-  lastpage: 355
 volume: 14
 issue: 4
 slug: RJ-2022-4-bioconductor
-packages:
-  cran: ~
-  bioc: ~
-draft: no
-preview: preview.png
-bibliography: ~
-CTV: ~
-output:
-  rjtools::rjournal_web_article:
-    self_contained: no
-    toc: no
-    legacy_pdf: yes
+journal:
+  lastpage: 355
+  firstpage: 352
 
 ---
 
 
 
 
-[Bioconductor](https://bioconductor.org) provides tools for the analysis
-and comprehension of high-throughput genomic data. The project has
-entered its twentieth year, with funding for core development and
-infrastructure maintenance secured through 2025 (NIH NHGRI
-2U24HG004059). Additional support is provided by NIH NCI,
-Chan-Zuckerberg Initiative, National Science Foundation, Microsoft, and
-Amazon. In this news report, we give some details about the software and
-data resource collection, infrastructure for building, checking, and
-distributing resources, core team activities, and some new initiatives.
+## Introduction 
 
-*Software ecosystem*
+[Bioconductor](https://bioconductor.org) provides
+tools for the analysis and comprehension of high-throughput genomic
+data.  The project has entered its twentieth year, with funding
+for core development and infrastructure maintenance secured
+through 2025 (NIH NHGRI 2U24HG004059).  Additional support is provided
+by NIH NCI, Chan-Zuckerberg Initiative, National Science Foundation,
+Microsoft, and Amazon. In this news report, we give some updates on 
+core team and project activities.
+ 
+## Software
 
-Bioconductor 3.15 was released on 27 April, 2022. It is compatible with
-R 4.2.0 and consists of 2140 software packages, 410 experiment data
-packages, 990 up-to-date annotation packages, 29 workflows, and 3 books.
-[Books](https://bioconductor.org/books/release/) are built regularly
-from source and therefore fully reproducible; an example is the
-community-developed [Orchestrating Single-Cell Analysis with
-Bioconductor](https://bioconductor.org/books/release/OSCA/). The
-Bioconductor [3.15 release
-announcement](https://bioconductor.org/news/bioc_3_15_release/) includes
-descriptions of 78 new software packages, and updates to NEWS files for
-many additional packages.
+The current Bioconductor release is [3.16](https://bioconductor.org/news/bioc_3_16_release/). It is
+compatible with R 4.2 and consists of 2183 software packages, 416
+experiment data packages, 909 up-to-date annotation packages, 28
+workflows, and 3 books. \href{https://bioconductor.org/books/release/}{Books} are
+built regularly from source and therefore fully
+reproducible; an example is the
+community-developed [Orchestrating Single-Cell Analysis with Bioconductor](https://bioconductor.org/books/release/OSCA/).
 
-*Infrastructure updates*
+### Bioconductor in Python!
 
--   Thanks to a generous allocation (BIR190004, \"Engineering and
-    disseminating a software and analysis ecosystem for genomic data
-    science\") provided through the National Science Foundation ACCESS
-    (formerly XSEDE) program, academic cloud resources including GPUs
-    and highly accessible object storage systems are being integrated
-    into project operations.
+We're excited to introduce [BiocPy](https://www.github.com/biocpy), a project aimed at enabling Bioconductor workflows in Python. Analysts today use a variety of languages in their workflows, including R/Bioconductor for statistical analysis and Python for imaging or machine learning tasks. BiocPy aims to facilitate interoperability between R and Python by providing standardized data structures based on existing Bioconductor data structures. These include genomic ranges for interval based operations, summarized experiments and other derivatives for analyzing genomic experiments. To learn more, visit the [BiocPy](https://github.com/biocpy) GitHub organization.
 
--   Transition of primary funding administration from Roswell Park
-    Comprehensive Cancer Center to Dana-Farber Cancer Institute has led
-    to a number of changes to platforms in use for the checking and
-    production of binary package images.
+## Core team updates
 
-    -   Linux builds occur at Dana-Farber Cancer Institute.
+### Default Branch Renaming
 
-    -   Windows builds occur in machinery provided by Microsoft Genomics
-        in the Azure cloud environment.
+The default branch (that corresponds to Bioconductor devel version) will be renamed to devel on git.bioconductor.org for all packages to move forward with diversity and inclusiveness.  The core has been doing extensive testing and is ready to move forward within the next 2-3 weeks.  
 
-    -   MacOS builds occur at Dana-Farber Cancer Institute. Work on the
-        support of ARM Mac systems occurs at MacStadium.
+Maintainers will temporarily still be able to push to either devel or master to allow time for adaptation, with the goal of eventually making it an error in maybe 2-3 release cycles (1-1.5 years) 
+We will be making announcements on bioc-devel mailing list, Twitter, Mastodon, Slack, etc with an upcoming/heads up and an announcement when it is live.
 
-    -   Details on the configurations of builders (e.g., [the Linux
-        builder](https://bioconductor.org/checkResults/3.16/bioc-LATEST/nebbiolo2-NodeInfo.html)
-        for the devel branch) are available at the [Build
-        reports](https://bioconductor.org/checkResults/) link at
-        bioconductor.org.
+### Partnering with Outreachy
 
--   An interactive app for surveying adverse conditions arising for
-    package install, build, and check processes has been introduced for
-    [release](https://vjcitn.shinyapps.io/biocPkgState315/) and
-    [devel](https://vjcitn.shinyapps.io/biocPkgState316/) branches.
+Bioconductor participated as a mentoring community in Outreachy's December 2022
+- March 2023 internship round. [Outreachy](https://www.outreachy.org/) provides
+open source and open science internships to individuals impacted by systemic
+bias and underrepresentation in tech. Bioconductor received funding for two
+interns through Outreachy's general fund for two projects. Kirabo Atuhurira,
+a software engineering student from Kampala, Uganda, was chosen to work on the
+[BSgenomeForge](https://github.com/Bioconductor/BSgenomeForge), which attempts
+to simplify making Bsgenome data packages. Beryl Kanali, a masters student
+from Nairobi, Kenya, was chosen to work on
+[Sweave2Rmd](https://github.com/Bioconductor/sweave2rmd), which attempts to
+modernize Sweave vignettes by converting them into R Markdown. You can read more
+about their experience at [Our experience as Outreachy interns with
+Bioconductor](https://bioconductor.github.io/biocblog/posts/2023-01-22-OutreachyInternship/).
 
--   Cloud-based workshop delivery systems have been an integral part of
-    Bioconductor conferences and teaching activities.
+Bioconductor will also participate in Outreachy's May 2023 - August 2023
+internship round to offer internships with Bioconductor community projects.
 
-    -   Workshops from Bioconductor 2022 are continuously available for
-        inspection and hands-on exercises at
-        <http://app.orchestra.cancerdatasci.org>, thanks to cloud
-        computing support provided by Dr. Sean Davis of University of
-        Colorado.
 
-    -   <http://workshop.bioconductor.org> is a Galaxy-based workshop
-        collection deployed on Jetstream2 in NSF ACCESS.
+## Conferences
 
-*Core team updates*
+The BioC2023 and EuroBioC2023 conferences have both been announced, and abstract submissions are open. BioC Asia 2023 will be announced later this year.
 
--   After six years of highly effective work in the core, Nitesh Turaga
-    has left for a position in industry. We will miss him!
+[BioC2023](https://bioc2023.bioconductor.org/) will be held in Boston, USA from Aug 2-4. Abstracts can be submitted until March 19.
 
--   New core developers Jen Wokaty and Alexandru Mahmoud have joined.
-    Jen is a member of the Waldron Lab at CUNY. Alex works at Channing
-    Division of Network Medicine.
+[EuroBioC2023](https://eurobioc2023.bioconductor.org/) will be held in Ghent, Belgium from Sep 20-22. Abstracts can be submitted until April 14.
 
--   Jen and Alex are joined by long-term core members Lori Kern of
-    Roswell Park Comprehensive Cancer Center, Marcel Ramos of CUNY and
-    Roswell, and Hervé Pages of Fred Hutchinson Cancer Research Center.
 
-*New initiatives*
+## Blog
 
--   Thanks to efforts of members of the Technical and Community Advisory
-    Boards and community members, a collection of working groups has
-    been defined to achieve new project aims. An
-    [overview](http://workinggroups.bioconductor.org/currently-active-working-groups-committees.html)
-    of currently active working groups is available, along with
-    [guidelines for proposing new working
-    groups](http://workinggroups.bioconductor.org/working-group-and-committee-guidelines.html).
+The [Bioconductor blog](https://bioconductor.github.io/biocblog/) is used for articles of interest by and for the community. Recent articles include:
 
--   The objectives of the bioconductor-teaching working group are stated
-    at the associated
-    [repository](https://github.com/bioconductor/bioconductor-teaching):
+- [Bioconductor Carpentries instructors Year 1](https://bioconductor.github.io/biocblog/posts/2023-02-24-carpentries-update/)  
+An update on the Bioconductor Carpentries global training program - applicants selected for Year 1
 
-    > The Bioconductor teaching committee is a collaborative effort to
-    > consolidate Bioconductor-focused training material and establish a
-    > community of Bioconductor trainers. We define a curriculum and
-    > implement online lessons for beginner and more advanced R users
-    > who want to learn to analyse their data with Bioconductor
-    > packages.
+- [Introducing CuratedAtlasQueryR package](https://bioconductor.github.io/biocblog/posts/2023-02-23-CuratedAtlasQueryR/)  
+CuratedAtlasQueryR is a new package that enables easy programmatic exploration of CELLxGENE single-cell human cell atlas data.
 
--   A [mentoring
-    program](https://bioconductor.org/developers/new-developer-program/)
-    for new developers has taken flight.
+- [Our experience as Outreachy interns with Bioconductor](https://bioconductor.github.io/biocblog/posts/2023-01-22-OutreachyInternship/)  
+Bioconductor participated in the Outreachy Internship program for the December 2022 cohort. Our interns share their experience working on their various projects and Bioconductor in general.
 
--   Thanks to an Essential Open Source Software grant from the
-    Chan-Zuckerberg Initiative, we have partnered with the Dana-Farber
-    Cancer Institute [YES for
-    CURE](https://www.dfhcc.harvard.edu/research/cancer-disparities/students/yes-for-cure/)
-    (Young Empowered Scientists for Continued Research Engagement)
-    program to offer instruction in cancer data science to interested
-    undergraduates. A [pkgdown site](https://vjcitn.github.io/YESCDS/)
-    includes current curricular materials.
+- [Bioconductor Hacktoberfest 2022 review and looking ahead to 2023](https://bioconductor.github.io/biocblog/posts/2023-01-20-hacktoberfest/)  
+Last October, Bioconductor joined Hacktoberfest and got great community contributions there. Here, we describe its success and notify the community we plan to participate in 2023.
 
--   With the NSF-based academic cloud resources previously mentioned, we
-    have begun gestation of G-DADS, a program for Genomic Data and
-    Analysis Development Services, with the objectives of providing
-    publicly accessible storage and compute on exemplars of the latest
-    high-volume experimental modalities, and of promoting GPUs to
-    first-class citizenship in our build and check systems.
 
-*Using Bioconductor*
+## Boards updates
 
-Start using Bioconductor by installing the most recent version of R and
-evaluating the commands
+### Community Advisory Board
 
-::: example
-if (!requireNamespace(\"BiocManager\", quietly = TRUE))
-install.packages(\"BiocManager\") BiocManager::install()
-:::
+- The [Community Advisory Board](https://bioconductor.org/about/community-advisory-board/) (CAB) are voting in new members. Outgoing members are Susan Holmes, Leonardo Collado-Torres, Yagoub A. I. Adam, Matt Ritchie, Benilton Carvalho, we gratefully thank them for their service.
 
-Install additional packages and dependencies, e.g.,
-[SingleCellExperiment](https://www.bioconductor.org/packages/release/bioc/html/SingleCellExperiment.html),
-with
+- There is a Call for Bioconductor Community-Led events supported by the CAB.
+Apply in [this form](https://forms.gle/oTHp26TG3eP9q4eE7)
 
-::: example
-BiocManager::install(\"SingleCellExperiment\")
-:::
 
-[Docker](https://bioconductor.org/help/docker/) images provides a very
-effective on-ramp for power users to rapidly obtain access to
-standardized and scalable computing environments. Key resources include:
+## Committees and Working groups updates
 
--   [bioconductor.org](https://bioconductor.org) to install, learn, use,
-    and develop Bioconductor packages.
+If you are interested in becoming involved with one of these groups please contact the group leader(s).
 
--   A list of [available software](https://bioconductor.org/packages),
-    linking to pages describing each package.
+- [Cloud Methods](https://workinggroups.bioconductor.org/currently-active-working-groups-committees.html#cloud-methods)
+  held their first meeting Feb 2023. The working group will meet monthly to
+  develop standards and tools for the Bioconductor community related to the
+  cloud.
 
--   A question-and-answer style [user support
-    site](https://support.bioconductor.org) and developer-oriented
-    [mailing list](https://stat.ethz.ch/mailman/listinfo/bioc-devel).
+- [Social media working group](https://workinggroups.bioconductor.org/currently-active-working-groups-committees.html#social-media).
+  A new group, started in Feb 2023, have set up
+  [Bioconductor Mastodon acccount](https://genomic.social/@bioconductor).
 
--   A community slack ([sign up](https://bioc-community.herokuapp.com/))
-    for extended technical discussion.
+- [Teaching Committee](https://workinggroups.bioconductor.org/currently-active-working-groups-committees.html#education)
+    - Are planning a hackathon for the
+      [Bioconductor Carpentries RNA-seq lesson](https://carpentries-incubator.github.io/bioc-rnaseq/).
+    - Will be participating in
+      [Galaxy Training Smorgasbord 2023](https://gallantries.github.io/video-library/events/smorgasbord3/),
+      a free online global event, May 22-26.
 
--   The [F1000Research Bioconductor
-    channel](https://f1000research.com/channels/bioconductor) for
-    peer-reviewed Bioconductor work flows.
+- [Website working group]([https://workinggroups.bioconductor.org/currently-active-working-groups-committees.html#website)
+  are planning the redesign of [bioconductor.org](bioconductor.org).
 
--   The [Bioconductor
-    YouTube](https://www.youtube.com/user/bioconductor) channel includes
-    recordings of keynote and talks from recent conferences including
-    Bioc2022, EuroBioC2022, and BiocAsia2021, in addition to video
-    recordings of training courses.
 
--   Our [package
-    submission](https://github.com/Bioconductor/Contributions)
-    repository for open technical review of new packages.
+## Other
 
-Recent Bioconductor conferences include [BioC
-2022](https://bioc2022.bioconductor.org) (July 27-29), and [European
-Bioconductor Meeting](https://eurobioc2022.bioconductor.org/) (September
-14-16). Each had invited and contributed talks, as well as workshops and
-other sessions to enable community participation. Slides, videos, and
-workshop material for each conference are, or will soon be, available on
-each conference web site as well as from the [Courses and
-Conferences](http://bioconductor.org/help/course-materials/) section of
-the Bioconductor web site.
+- Summer school *"Statistical Data Analysis for Genome-Scale Biology"* [CSAMA 2023](https://csama2023.bioconductor.eu/) in Bressanone-Brixen, Italy, June 11-16 2023. Application deadline March 15. 
+- Course *"Statistical Analysis of Genome Scale Data"* at [CSHL](https://meetings.cshl.edu/courses.aspx?course=C-DATA&year=23) in New York, USA, June 30 - July 13 2023. Application deadline March 15. 
+- Workshop *"Opportunities for Bioconductor and ELIXIR communities to co-develop training infrastructure"* accepted for the [ELIXIR All Hands meeting](https://elixir-europe.org/events/elixir-all-hands-2023) in Dublin, Ireland, June 5-8 2023.
+- Workshop *"Orchestrating Large-Scale Single-Cell Analysis with Bioconductor"* accepted for [ISMB/ECCB 2023](https://www.iscb.org/ismbeccb2023-programme/tutorials#ip4) in Lyon, France, July 23 2023.
 
-The Bioconductor project continues to mature as a community. The
-[Technical](https://bioconductor.org/about/technical-advisory-board/)
-and
-[Community](https://bioconductor.org/about/community-advisory-board/)
+
+## Using Bioconductor
+
+Start using
+Bioconductor by installing the most recent version of R and evaluating
+the commands
+```
+  if (!requireNamespace("BiocManager", quietly = TRUE))
+      install.packages("BiocManager")
+  BiocManager::install()
+```
+
+Install additional packages and dependencies,
+e.g., [SingleCellExperiment](https://bioconductor.org/packages/SingleCellExperiment), with
+```
+  BiocManager::install("SingleCellExperiment")
+```
+[Docker](https://bioconductor.org/help/docker/)
+images provides a very effective on-ramp for power users to rapidly
+obtain access to standardized and scalable computing environments.
+Key resources include:
+
+
+- [bioconductor.org](https://bioconductor.org) to install,
+  learn, use, and develop Bioconductor packages.
+- A list of [available software](https://bioconductor.org/packages)
+  linking to pages describing each package.
+- A question-and-answer style
+  [user support site](https://support.bioconductor.org) and
+  developer-oriented [mailing list](https://stat.ethz.ch/mailman/listinfo/bioc-devel).
+- A community slack workspace ([sign up](https://slack.bioconductor.org))
+   for extended technical discussion.
+- The [F1000Research Bioconductor gateway](https://f1000research.com/gateways/bioconductor)
+for peer-reviewed Bioconductor workflows as well as conference contributions.
+- The [Bioconductor YouTube](https://www.youtube.com/user/bioconductor)
+     channel includes recordings of keynote and talks from recent 
+     conferences including BioC2022, EuroBioC2022, and BiocAsia2021, in addition to 
+     video recordings of training courses. 
+- Our [package submission](https://github.com/Bioconductor/Contributions)
+  repository for open technical review of new packages.
+
+Upcoming and recently completed events are browsable at our
+[events page](https://bioconductor.org/help/events/).
+
+The [Technical](https://bioconductor.org/about/technical-advisory-board/)
+and and [Community](https://bioconductor.org/about/community-advisory-board/)
 Advisory Boards provide guidance to ensure that the project addresses
-leading-edge biological problems with advanced technical approaches, and
-adopts practices (such as a project-wide [Code of
-Conduct](https://bioconductor.org/about/code-of-conduct/)) that
-encourages all to participate. We look forward to welcoming you!
-
-email:maintainer@bioconductor.org
+leading-edge biological problems with advanced technical approaches,
+and adopts practices (such as a
+project-wide [Code of Conduct](https://bioconductor.org/about/code-of-conduct/)
+that encourages all to participate. We look forward to
+welcoming you!
