Updated issue 2025-2 news items

--- a/_news/RJ-2025-2-bioconductor/RJ-2025-2-bioconductor.Rmd
+++ b/_news/RJ-2025-2-bioconductor/RJ-2025-2-bioconductor.Rmd
@@ -16,9 +16,6 @@ volume: 17
 issue: 2
 slug: RJ-2025-2-bioconductor
 draft: no
-journal:
-  lastpage: 260
-  firstpage: 257
 
 ---
 
@@ -62,12 +59,11 @@ community-developed [Orchestrating Single-Cell Analysis with Bioconductor](https
 # Core Team and Infrastructure Updates
 
 Of note:
-<ul>
-<li> A pair of machines with NVIDIA GPUs were added to the system.  See
+
+* A pair of machines with NVIDIA GPUs were added to the system.  See
 [devel branch build reports](https://bioconductor.org/checkResults/3.22/bioc-gpu-LATEST/) for
 more information.
-<li> An [HDF5Array vignette](https://bioconductor.org/packages/release/bioc/vignettes/HDF5Array/inst/doc/HDF5Array_performance.html) includes new performance analysis data.
-</ul>
+* An [HDF5Array vignette](https://bioconductor.org/packages/release/bioc/vignettes/HDF5Array/inst/doc/HDF5Array_performance.html) includes new performance analysis data.
 
 NEWS summaries for three contributed packages chosen at random from the 72 new software contributions are:
 
@@ -137,6 +133,7 @@ In March 2025, we published a [blog post](https://blog.bioconductor.org/posts/20
 Start using
 Bioconductor by installing the most recent version of R and evaluating
 the commands
+
 ```
   if (!requireNamespace("BiocManager", quietly = TRUE))
       install.packages("BiocManager")
@@ -145,14 +142,15 @@ the commands
 
 Install additional packages and dependencies,
 e.g., [SingleCellExperiment](https://bioconductor.org/packages/SingleCellExperiment), with
+
 ```
   BiocManager::install("SingleCellExperiment")
 ```
+
 [Docker](https://bioconductor.org/help/docker/)
 images provides a very effective on-ramp for power users to rapidly
 obtain access to standardized and scalable computing environments.
 Key resources include:
-
 
 - [bioconductor.org](https://bioconductor.org) to install,
   learn, use, and develop Bioconductor packages.
