--- a/_news/RJ-2025-2-bioconductor/RJ-2025-2-bioconductor.tex
+++ b/_news/RJ-2025-2-bioconductor/RJ-2025-2-bioconductor.tex
@@ -54,11 +54,15 @@ community-developed \href{https://bioconductor.org/books/release/OSCA/}{Orchestr
 
 Of note:
 
-A pair of machines with NVIDIA GPUs were added to the system. See
-\href{https://bioconductor.org/checkResults/3.22/bioc-gpu-LATEST/}{devel branch build reports} for
-more information.
-
-An \href{https://bioconductor.org/packages/release/bioc/vignettes/HDF5Array/inst/doc/HDF5Array_performance.html}{HDF5Array vignette} includes new performance analysis data.
+\begin{itemize}
+\tightlist
+\item
+  A pair of machines with NVIDIA GPUs were added to the system. See
+  \href{https://bioconductor.org/checkResults/3.22/bioc-gpu-LATEST/}{devel branch build reports} for
+  more information.
+\item
+  An \href{https://bioconductor.org/packages/release/bioc/vignettes/HDF5Array/inst/doc/HDF5Array_performance.html}{HDF5Array vignette} includes new performance analysis data.
+\end{itemize}
 
 NEWS summaries for three contributed packages chosen at random from the 72 new software contributions are:
 
